--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,9 +6,51 @@ on:
       - '*'
 
 jobs:
-  build:
+  setup-composer:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag oaza:$(tag)
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Cache Composer packages
+        id: composer-cache
+        uses: actions/cache@v3
+        with:
+          path: vendor
+          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
+      - name: Validate composer.json and composer.lock
+        run: composer validate --strict
+
+  install-dependencies:
+    runs-on: ubuntu-latest
+    needs: [setup-composer]
+    steps:
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress
+
+  build-docker-image:
+    runs-on: ubuntu-latest
+    needs: install-dependencies
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Build the Docker image
+        run: |
+          docker build . --file Dockerfile --tag rdurica/oaza:$(echo ${{ github.ref }} | sed 's/refs\/tags\///')
+          docker tag rdurica/oaza:$(echo ${{ github.ref }} | sed 's/refs\/tags\///') rdurica/oaza:latest
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push Docker image
+        run: |
+          docker push rdurica/oaza:$(echo ${{ github.ref }} | sed 's/refs\/tags\///')
+          docker push rdurica/oaza:latest
