--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Build the Docker image
         run: |
-          docker build . --file Dockerfile --tag rdurica/oaza:$(echo ${{ github.ref }} | sed 's/refs\/tags\///')
+          docker build . --file build/test/Dockerfile --tag rdurica/oaza:$(echo ${{ github.ref }} | sed 's/refs\/tags\///')
           docker tag rdurica/oaza:$(echo ${{ github.ref }} | sed 's/refs\/tags\///') rdurica/oaza:latest
       - name: Login to DockerHub
         uses: docker/login-action@v1
