--- a/app/Translations/messages.cs_CZ.neon
+++ b/app/Translations/messages.cs_CZ.neon
@@ -13,6 +13,7 @@ flash:
     contactUsSuccess: "Děkujeme za dotaz, Budeme vás kontaktovat co nejdříve"
     equalPassword: "Hesla se musí shodovat"
     passwordChanged: "Heslo bylo úspěšně změneno. Nyní se můžete přihlásit"
+    newPasswordSent: "Na zadaný e-mail jsme odeslali odkaz pro resetování hesla. Zkontrolujte svou e-mailovou schránku"
 
 user:
     email: "E-mail"
