--- a/app/Translations/messages.cs_CZ.neon
+++ b/app/Translations/messages.cs_CZ.neon
@@ -14,8 +14,8 @@ flash:
     equalPassword: "Hesla se musí shodovat"
     passwordChanged: "Heslo bylo úspěšně změneno. Nyní se můžete přihlásit"
     newPasswordSent: "Na zadaný e-mail jsme odeslali odkaz pro resetování hesla. Zkontrolujte svou e-mailovou schránku"
-    telephoneFormat: "9 místní telefonní číslo"
-    minPasswordLength: "Minimální délka hesla je 8 znaků"
+    telephoneFormat: "Nesprávny formát telefonního čísla"
+    minPasswordLength: "Minimální délka hesla je %s znaků"
 
 user:
     email: "E-mail"
