Added: User grid

--- a/app/Translations/messages.cs_CZ.neon
+++ b/app/Translations/messages.cs_CZ.neon
@@ -18,6 +18,8 @@ flash:
     telephoneFormat: "Nesprávny formát telefonního čísla"
     minPasswordLength: "Minimální délka hesla je %s znaků"
     notAuthorized: "Litujeme, ale zdá se, že nemáte dostatečná oprávnění pro přístup k této stránce"
+    userDeleted: "Uživatel smazán"
+    userUpdated: "Uživatel aktualizován"
 
 user:
     email: "E-mail"
