--- a/app/Config/services.neon
+++ b/app/Config/services.neon
@@ -25,3 +25,4 @@ services:
 
 ## Grid
     - App\Modules\Admin\Component\Grid\Reservation\IReservation
+    - App\Modules\Admin\Component\Grid\User\IUser
