Added: News grid and missing libs for build

--- a/app/Config/services.neon
+++ b/app/Config/services.neon
@@ -26,3 +26,4 @@ services:
 ## Grid
     - App\Modules\Admin\Component\Grid\Reservation\IReservation
     - App\Modules\Admin\Component\Grid\User\IUser
+    - App\Modules\Admin\Component\Grid\News\INews
