Added: PhpDocs comments

--- a/app/Config/services.neon
+++ b/app/Config/services.neon
@@ -3,22 +3,22 @@ services:
 
 ## Services
     - App\Model\Service\Mail\MailService(%env.EMAIL_ADMIN%, %env.EMAIL_ADMIN_PASSWORD%)
-    - App\Model\Service\CalendarService
+    - App\Model\Service\CalendarServiceOld
     - App\Model\Service\Authentication\Authenticator
     - App\Model\Service\Authentication\PasswordService
-    - App\Model\Service\ReservationService
+    - App\Model\Service\ReservationServiceOld
 
 ## Manager
     - App\Model\Manager\UserManager
-    - App\Model\Manager\NewsManager
-    - App\Model\Manager\RestrictionManager
+    - App\Modules\Admin\Manager\NewsManager
+    - App\Modules\Admin\Manager\RestrictionManager
     - App\Model\Manager\ReservationManager
 ## Forms
     - App\Component\Form\Auth\ChangePassword\IChangePassword
     - App\Component\Form\ContactUs\IContactUs
     - App\Modules\Admin\Component\Form\News\INews
-    - App\Component\Form\Auth\Login\ILoginForm
-    - App\Component\Form\Auth\Register\IRegistrationForm
+    - App\Component\Form\Auth\Login\ILogin
+    - App\Component\Form\Auth\Register\IRegistration
     - App\Component\Form\Auth\ResetPassword\IResetPassword
     - App\Modules\Admin\Component\Form\Restriction\IRestriction
     - App\Component\Form\Reservation\IReservation
