--- a/src/composer.json
+++ b/src/composer.json
@@ -35,8 +35,7 @@
 		"tracy/tracy": "^2.10",
 		"contributte/translation": "^2.0",
 		"ublaboo/datagrid": "^6.9",
-		"nette/mail": "^4.0",
-		"contributte/recaptcha": "^3.5"
+		"nette/mail": "^4.0"
 	},
 	"autoload": {
 		"psr-4": {
