--- a/src/app/Config/oaza.neon
+++ b/src/app/Config/oaza.neon
@@ -1,3 +1,4 @@
 parameters:
+    enableSentry: true
     passwordLength: 12
     telephoneRegex: "^(2[0-9]{2}|3[0-9]{2}|4[0-9]{2}|5[0-9]{2}|72[0-9]|73[0-9]|77[0-9]|60[1-8]|56[0-9]|70[2-5]|79[0-9])[0-9]{3}[0-9]{3}$"
