--- a/src/composer.json
+++ b/src/composer.json
@@ -35,7 +35,8 @@
 		"tracy/tracy": "^2.10",
 		"contributte/translation": "^2.0",
 		"ublaboo/datagrid": "^6.9",
-		"nette/mail": "^4.0"
+		"nette/mail": "^4.0",
+		"contributte/sentry": "^0.4.0"
 	},
 	"autoload": {
 		"psr-4": {
