--- a/src/app/Config/services.neon
+++ b/src/app/Config/services.neon
@@ -5,7 +5,7 @@ services:
   - App\Model\Service\Authentication\Authenticator
   - App\Model\Service\Authentication\PasswordService
   - App\Model\Service\CalendarServiceOld
-  - App\Model\Service\Mail\MailService(%env.EMAIL_HOST%, %env.EMAIL_ADMIN%, %env.EMAIL_ADMIN_PASSWORD%, %env.EMAIL_PORT%, %env.EMAIL_ENCRYPTION%)
+  - App\Model\Service\Mail\MailService(%env.EMAIL_HOST%, %env.EMAIL_ADMIN%, %env.EMAIL_ADMIN_PASSWORD%, %env.EMAIL_PORT%, %env.EMAIL_ENCRYPTION%, %env.EMAIL_FROM%, %env.EMAIL_CONTACT%)
   - App\Model\Service\ReservationServiceOld
 
   # Manager
